# textual-canvas

./: .gitignore  .pylintrc  404.html  ChangeLog.md  Makefile  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py
.github/workflows/: code-checks.yaml
canvas/: index.html
changelog/: index.html
docs/examples/: clear_pixel.py  clear_pixels.py  default_background.py  draw_circle.py  draw_line.py  draw_rectangle.py  mandelbrot.py  own_background.py  prism.py  set_pixel.py  set_pixel_colour.py  set_pixels.py  sizing.py
docs/source/: CNAME  canvas.md  guide.md  index.md
guide/: index.html
licence/: index.html
search/: search_index.json
src/textual_canvas/: __init__.py  __main__.py  canvas.py
tests/snapshot/: test_batch_refresh.py  test_demo.py  test_pen_color.py  test_plots.py
tests/unit/: test_widget.py
textual_canvas/: __init__.py  __main__.py  canvas.py
