[project]
name = "textual-canvas"
version = "0.2.1"
description = "A simple Textual canvas widget"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=1.0.0",
    "typing-extensions>=4.13.2",
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT License" }
keywords = [
    "terminal",
    "library",
    "canvas",
    "drawing",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://textual-canvas.davep.dev/"
Repository = "https://github.com/davep/textual-canvas"
Documentation = "https://textual-canvas.davep.dev/"
Source = "https://github.com/davep/textual-canvas"
Issues = "https://github.com/davep/textual-canvas/issues"
Discussions = "https://github.com/davep/textual-canvas/discussions"

[build-system]
# https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3", "hatch-vcs"]
# requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=4.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    "codespell>=2.4.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/textual_canvas"]

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]
