[project]
name = "textual-canvas"
version = "1.0.0"
description = "A simple Textual canvas widget"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=1.0.0",
    "typing-extensions>=4.13.2",
]
readme = "README.md"
requires-python = ">= 3.9"
license = "MIT"
keywords = [
    "terminal",
    "library",
    "canvas",
    "drawing",
]
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://textual-canvas.davep.dev/"
Repository = "https://github.com/davep/textual-canvas"
Documentation = "https://textual-canvas.davep.dev/"
Source = "https://github.com/davep/textual-canvas"
Issues = "https://github.com/davep/textual-canvas/issues"
Discussions = "https://github.com/davep/textual-canvas/discussions"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    "codespell>=2.4.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
    "ruff>=0.12.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-textual-snapshot>=1.1.0",
    "pytest-cov>=7.0.0",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
venvPath="."
venv=".venv"
exclude=[".venv"]
