[metadata]
name = textual-canvas
description = A simple Textual canvas widget.
version = attr: textual_canvas.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/textual-canvas
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: MIT License
license_files = LICENCE
keywords = terminal, library, canvas, drawing
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Terminals
    Topic :: Software Development :: Libraries
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/textual-canvas/blob/main/README.md
    Source = https://github.com/davep/textual-canvas
    Issues = https://github.com/davep/textual-canvas/issues
    Discussions = https://github.com/davep/textual-canvas/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires = textual>=0.16.0
python_requires = >=3.7

[options.package_data]
textual_canvas = py.typed

### setup.cfg ends here
